...
            "state": "translated",
            "value": "Réglages du groupe"
          }
        }
      }
    },
    "Groups": {
      "localizations": {
        "fr": {
          "stringUnit": {
            "state": "translated",
            "value": "Groupes"
          }
        }
      }
    },
    "Information": {
      "localizations": {
        "fr": {
          "stringUnit": {
            "state": "translated",
            "value": "Informations"
          }
...
